using Microsoft.AspNetCore.Http;
using Microsoft.AspNetCore.Mvc;

namespace Kuizlet.Api.Controllers
{
    [Route("api/[controller]")]
    [ApiController]
    public class CardSetController : ControllerBase
    {
    }
}
