using Microsoft.AspNetCore.Http;
using Microsoft.AspNetCore.Mvc;

namespace Kuizlet.Web.Controllers
{
    [Route("api/[controller]")]
    [ApiController]
    public class CardController : ControllerBase
    {
    }
}
